# python-toolbox

./: README.md  pyproject.toml
flashcards_cli/: __init__.py  cards.json  cli.py  storage.py
src/toolbox/flashcards_cli/: README.md  cli.py
src/toolbox/todo_cli/: cli.py
todo_app/: tasks.json  tasks.txt  todo_app.py
todo_cli/: README.md  todo.py
toolbox/flashcards_cli/: storage.py
toolbox/scaffolder/: README.md  cli.py
